todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 4545
      protocol: TCP
      targetPort: 6060
